--- a/nuevo-cliente.html
+++ b/nuevo-cliente.html
@@ -84,7 +84,6 @@
             </div>
         </main>
     </div>
-    <script src="js/funciones.js"></script>
-    <script src="js/nuevocliente.js"></script>
+    <script src="js/nuevocliente.js" type="module"></script>
 </body>
 </html>
